# TnPtree-analyzer

./: CMakeLists.txt  README.md  doHist.sh  draw.py  draw_fix_intervals.py  env.sh  fit.py  prepare_jobs.py  prepare_weight_jobs.py
config/: 2016.yaml  2017.yaml  2018.yaml  electron.yaml  photon.yaml  photonHLT.yaml  photon_2016_all_noIso.yaml  photon_2016_barrel_noIso.yaml  photon_2016_endcap_noIso.yaml  photon_all_noIso.yaml  photon_barrel_noIso.yaml  photon_endcap_noIso.yaml
include/: PhotonPrescales.h  fitter_tree.h
src/: .addBranches.cc.swp  Options.cc  PhotonPrescales.cc  addBranches.cc  addWeights.cc  fitter_tree.cc  getEfficiencies.cc  makeHisto.cc
